[sub_resource type="Spatial" id=1]

canvas_layer/root = true
canvas_layer/mouse_filter = Ignore

[ext_resource path="res://Sphere.gd" type="Script" id=2]

[node name="Root" type="Spatial"]

script = ExtResource(2)

[sub_resource type="MeshInstance3D" id=3]

mesh = NewEmpty(Mesh)
mesh/primitive_type = Mesh.PRIMITIVE_SPHERE
mesh/surface_material_override = NewEmpty(Material)
mesh/sphere_radius = 10.0

[node name="Sphere" type="MeshInstance3D" parent="."]

mesh = ExtResource(3)

[sub_resource type="Camera3D" id=4]

camera/near_clip = 0.1
camera/far_clip = 10000.0
camera/fov = 60.0

[node name="Camera" type="Camera3D" parent="."]

transform = Vector3(0, 0, 20), Vector3(0, 1, 0), Vector3(0, 1, 0)
current = true
camera = ExtResource(4)

[sub_resource type="MeshInstance3D" id=5]

mesh = NewEmpty(Mesh)
mesh/primitive_type = Mesh.PRIMITIVE_SPHERE
mesh/surface_material_override = NewEmpty(Material)
mesh/sphere_radius = 0.2

[node name="Trajectory1" type="MeshInstance3D" parent="."]

mesh = ExtResource(5)

[sub_resource type="MeshInstance3D" id=6]

mesh = NewEmpty(Mesh)
mesh/primitive_type = Mesh.PRIMITIVE_SPHERE
mesh/surface_material_override = NewEmpty(Material)
mesh/sphere_radius = 0.2

[node name="Trajectory2" type="MeshInstance3D" parent="."]

mesh = ExtResource(6)

[sub_resource type="MeshInstance3D" id=7]

mesh = NewEmpty(Mesh)
mesh/primitive_type = Mesh.PRIMITIVE_SPHERE
mesh/surface_material_override = NewEmpty(Material)
mesh/sphere_radius = 0.2

[node name="Trajectory3" type="MeshInstance3D" parent="."]

mesh = ExtResource(7)

[sub_resource type="MeshInstance3D" id=8]

mesh = NewEmpty(Mesh)
mesh/primitive_type = Mesh.PRIMITIVE_SPHERE
mesh/surface_material_override = NewEmpty(Material)
mesh/sphere_radius = 0.2

[node name="Trajectory4" type="MeshInstance3D" parent="."]

mesh = ExtResource(8)